# localhomeagent

./: .gitignore  Dockerfile  LICENSE  README.md  build-all.sh  build.spec  docker-compose.yml  installer.nsi  render.yaml  requirements.txt  run.py  test_windows.ps1
.github/: dependabot.yml
agent/: README.md  pyproject.toml
agent/src/local_home_agent/: __init__.py  __main__.py  main.py
app/: __init__.py  auth.py  auto_updater.py  bluetooth_pairing.py  communication_protocol.py  context_manager.py  conversation_cache.py  encryption_module.py  energy_model.py  extended_thinking.py  home_assistant.py  iot_discovery.py  iot_pairing_wizard.py  llm_client.py  log_manager.py  main.py  notifications.py  persona_builder.py  platform_pairing.py  prompt_chains.py  queue_auth.py  rbac.py  secret_store.py  system_check.py  thermodynamic_reasoning.py  tool_graph.py  verification_swarm.py  voice_module.py
config/: config.example.yaml  portable.yaml  prompts.yaml
docs/: API_DOCUMENTATION.md  DEVELOPMENT_PLAN.md  SETUP_GUIDE.md  TODO_DEEP_ANALYSIS.md
site/: index.html  package.json  tsconfig.app.json
static/: manifest.json  sw.js
templates/: admin-guide.html  chat.html  dashboard-enhanced.html  dashboard.html  guest.html  guest_login.html  index-enhanced.html  manifest.json  offline.html  residents.html  settings.html  setup.html  waiting-room.html
tests/: conftest.py  test_auto_updater.py  test_conversation_cache.py  test_first_run_setup.py  test_guest_pin.py  test_health.py  test_platform_pairing.py  test_system_check.py  test_tool_graph.py  test_websocket_chat.py
(+27 files in other folders)
